--- a/Diplom_alina/app/views/layouts/application.html.haml
+++ b/Diplom_alina/app/views/layouts/application.html.haml
@@ -57,7 +57,7 @@
                       %strong= "Студенты"
                       %ul{:class=>'nav nav-second-level collapse'}
                         %li
-                          %a{:href=>"#"}
+                          %a{:href=>"/students/new"}
                             %i{:class=>'glyphicon glyphicon-plus'}
                               %i= 'Добавить студента'
 
