--- a/Diplom_alina/app/views/layouts/application.html.haml
+++ b/Diplom_alina/app/views/layouts/application.html.haml
@@ -47,7 +47,7 @@
                       %strong= "Поиск"
                       %ul{:class=>'nav nav-second-level collapse'}
                         %li
-                          %a{:href=>"#"}
+                          %a{:href=>"/search"}
                             %i{:class=>'glyphicon glyphicon-search'}
                             %i= 'Расширенный поиск'
 
