--- a/Diplom_alina/app/views/photos/_form.html.haml
+++ b/Diplom_alina/app/views/photos/_form.html.haml
@@ -7,7 +7,7 @@
           %li= msg
 
   .field
-    = f.label :path
-    = f.text_field :path
+    = f.label :photo
+    = f.file_field :photo
   .actions
     = f.submit 'Save'
