--- a/Diplom_alina/app/views/students/edit.html.haml
+++ b/Diplom_alina/app/views/students/edit.html.haml
@@ -1,29 +1,6 @@
-/ <%= form_for(@student) do |f| %>
-/   <% if @student.errors.any? %>
-/     <div id="error_explanation">
-/       <h2><%= pluralize(@student.errors.count, "error") %> prohibited this student from being saved:</h2>
-
-/       <ul>
-/       <% @student.errors.full_messages.each do |message| %>
-/         <li><%= message %></li>
-/       <% end %>
-/       </ul>
-/     </div>
-/   <% end %>
-
-/   <div class="field">
-/     <%= f.label :ducket_date %><br>
-/     <%= f.datetime_select :ducket_date %>
-/   </div>
-/   <div class="field">
-/     <%= f.label :ducket_number %><br>
-/     <%= f.number_field :ducket_number %>
-/   </div>
-/   <div class="actions">
-/     <%= f.submit %>
-/   </div>
-/ <% end %>
-
+.row
+  .col-lg-12
+    %h1{:class=>"page-header"} Редактирование студента
 
 
 .row
@@ -41,79 +18,82 @@
             .col-md-4
               .from-group
                 %label Имя
-                %input{:class=>'form-control',:name=>"first_name", :placeholder=>""}
+                %input{:class=>'form-control',:name=>"first_name", :placeholder=>"", :value=>@student.person.passports.last.first_name}
             .col-md-4
               .from-group
                 %label Фамилия
-                %input{:class=>'form-control', :name=>"second_name", :placeholder=>""}
+                %input{:class=>'form-control', :name=>"second_name", :placeholder=>"", :value=>@student.person.passports.last.second_name}
             .col-md-4
               .from-group
                 %label Отчество
-                %input{:class=>'form-control', :name=>"last_name",:placeholder=>""}
+                %input{:class=>'form-control', :name=>"last_name",:placeholder=>"", :value=>@student.person.passports.last.last_name}
           .row
             .col-md-4
               .from-group
                 %label Дата рождения
-                %input{:class=>'form-control datepicker', :name=>"birthday"}
+                %input{:class=>'form-control datepicker', :name=>"birthday", :value=>date_convert_datepicker(@student.person.passports.last.birthday)}
             .col-md-4
               .form-group
                 %label Пол
-                %select{:class=>"form-control", :name=>'sex', :default=>'m'}
+                %select{:class=>"form-control", :name=>'sex', :default=>'m', :value=>@student.person.passports.last.sex}
                   %option{:value => "m", :selected => params[:sex] == "m"}= "Мужской"
                   %option{:value => "w", :selected => params[:sex] == "w"}= "Женский"
             .col-md-4
               .from-group
                 %label Город рождения
-                %input{:class=>'form-control', :name=>"birth_city",:placeholder=>""}
+                %input{:class=>'form-control', :name=>"birth_city",:placeholder=>"", :value=>@student.person.passports.last.birth_city}
           .row
             .col-md-6
               .form-group
                 =f.label "Номер студентческого"
-                =f.number_field :ducket_number, :class=>'form-control'
+                =f.number_field :ducket_number, :class=>'form-control', disabled: true
 
             .col-md-6
               .from-group
                 =f.label "Дата выдачи студентческого"
-                = f.text_field :ducket_date, :class=>"form-control datepicker"
+                = f.text_field :ducket_date, :class=>"form-control datepicker", :value => date_convert_datepicker(@student.ducket_date), disabled: true
           .row
             .col-md-4
               .from-group
                 %label Паспорт Серия
-                %input{:class=>'form-control', :name=>"series",:placeholder=>""}
+                %input{:class=>'form-control', :name=>"series",:placeholder=>"", :value=>@student.person.passports.last.series}
             .col-md-4
               .from-group
                 %label Паспорт номер
-                %input{:class=>'form-control', :name=>"number",:placeholder=>""}
+                %input{:class=>'form-control', :name=>"number",:placeholder=>"", :value=>@student.person.passports.last.number}
             .col-md-4
               .from-group
                 %label Код подразделения
-                %input{:class=>'form-control', :name=>"code_subdivision",:placeholder=>""}
+                %input{:class=>'form-control', :name=>"code_subdivision",:placeholder=>"", :value=>@student.person.passports.last.code_subdivision}
           .row
             .col-md-8
               .from-group
                 %label Кем выдан
-                %input{:class=>'form-control', :name=>"passport_issued",:placeholder=>""}
+                %input{:class=>'form-control', :name=>"passport_issued",:placeholder=>"", :value=>@student.person.passports.last.passport_issued}
             .col-md-4
               .from-group
                 %label Дата выдачи
-                %input{:class=>'form-control datepicker', :name=>"date_extradition",:placeholder=>""}
+                %input{:class=>'form-control datepicker', :name=>"date_extradition",:placeholder=>"", :value=>date_convert_datepicker(@student.person.passports.last.date_extradition)}
           .row
             .col-md-12
               .from-group
                 %label Место прописки
-                %input{:class=>'form-control', :name=>"propiska",:placeholder=>""}
+                %input{:class=>'form-control', :name=>"propiska",:placeholder=>"", :value=>@p_address.address}
           .row
             .col-md-12
               .from-group
                 %label Место регистрации
-                %input{:class=>'form-control', :name=>"registration",:placeholder=>""}
+                %input{:class=>'form-control', :name=>"registration",:placeholder=>"", :value=>@r_address.address}
           .row
             .col-md-12
               .from-group
                 %label Фактическое место проживания
-                %input{:class=>'form-control', :name=>"fackt",:placeholder=>""}
+                %input{:class=>'form-control', :name=>"fackt",:placeholder=>"", :value=>@f_address.address}
           .clearfix
           %p
           .action
             =f.submit(:class=>"btn btn-primary") do
               %i= 'Сохранить студента'
+
+
+
