сделан список изменений паспорта, фото, адресса с выводом измененных полей

--- a/Diplom_alina/app/assets/stylesheets/application.css.scss
+++ b/Diplom_alina/app/assets/stylesheets/application.css.scss
@@ -228,3 +228,7 @@ select.form-control.date-actual {
   height: 20px;
   padding: 0 0;
 }
+
+a.fancybox-item.fancybox-close:hover {
+  background-color: transparent;
+}
