--- a/Diplom_alina/app/assets/stylesheets/application.css.scss
+++ b/Diplom_alina/app/assets/stylesheets/application.css.scss
@@ -179,7 +179,7 @@ ul.nav-second-level > li > a:visited {
 .r_item
 {
   padding-top: 10px;
-  background-color: #dad4ae;
+  background-color: rgba(114, 228, 218, 0.16);
   color: #d6d6d6;
   text-align: center;
   margin-top:40px;
