--- a/Diplom_alina/app/views/groups/_form.html.haml
+++ b/Diplom_alina/app/views/groups/_form.html.haml
@@ -1,13 +1,23 @@
 = form_for @group do |f|
-  - if @group.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@group.errors.count, "error")} prohibited this group from being saved:"
-      %ul
-        - @group.errors.full_messages.each do |msg|
-          %li= msg
+  -#- if @group.errors.any?
+  -#  #error_explanation
+  -#    %h2= "#{pluralize(@group.errors.count, "error")} prohibited this group from being saved:"
+  -#    %ul
+  -#      - @group.errors.full_messages.each do |msg|
+  -#        %li= msg
+  -#
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .actions
-    = f.submit 'Save'
+  -#.actions
+  -#  = f.submit 'Save'
+
+
+  .row
+    .col-md-10
+      .col-lg-12
+    .panel.panel-default
+      .panel-heading
+        Создать группу
+      .panel-body
+        .form-group
+          = f.label "Название"
+          = f.text_field :name, :class=>'form-control'
