--- a/Diplom_alina/app/views/terms/show.html.haml
+++ b/Diplom_alina/app/views/terms/show.html.haml
@@ -1,10 +1,10 @@
 %p#notice= notice
 
 %p
-  %b Term start:
-  = @term.term_start
+  %b Начало учебного отрезка
+  = @term.start_term
 %p
-  %b End term:
+  %b Конец учебного отрезка
   = @term.end_term
 
 = link_to 'Edit', edit_term_path(@term)
