--- a/Diplom_alina/app/views/groups/new.html.haml
+++ b/Diplom_alina/app/views/groups/new.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-lg-12
-    %h1{:class=>"page-header"} Создать группу/подразделение
+    %h1{:class=>"page-header"} Создать группу/ добавить подразделение
 
 = render 'form'
 
