--- a/Diplom_alina/app/views/layouts/application.html.haml
+++ b/Diplom_alina/app/views/layouts/application.html.haml
@@ -43,7 +43,7 @@
                 %li
                   %a{:href=>"/groups"}
                     %i{:class=>"fa fa-list fa-fw"}
-                    %strong= "Списки групп"
+                    %strong= "группы/подразделения"
                 %li
                   %a{:href=>"/terms"}
                     %i{:class=>"fa fa-list fa-fw"}
