--- a/Diplom_alina/app/views/layouts/application.html.haml
+++ b/Diplom_alina/app/views/layouts/application.html.haml
@@ -41,6 +41,10 @@
             .sidebar-nav.collapse.navbar-collapse
               %ul.nav.navbar-nav{:id=>"side-menu" }
                 %li
+                  %a{:href=>"/plans"}
+                    %i{:class=>"fa fa-list fa-fw"}
+                    %strong= "Направления/Специальности"
+                %li
                   %a{:href=>"/groups"}
                     %i{:class=>"fa fa-list fa-fw"}
                     %strong= "группы/подразделения"
